[package]
name = "paperwall"
description = "Simple program to fetch random image and set it as wallpaper"
version = "0.2.0"
edition = "2021"
authors = ["Towsif Kafi <kafitowsif@gmail.com>"]
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["wallpaper", "desktop", "random", "background"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/towsifkafi/paperwall"
repository = "https://github.com/towsifkafi/paperwall"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
wallpape-rs = { version = "2.0.0", features = ["from_url"] }
colored = "2.1.0"
rand = "0.8.5"
terminal-log-symbols = "0.1.6"
serde_yaml = "0.9.34"
dirs = "6.0.0"
indicatif = "0.18.6"
clap_complete = "4.6.7"
chrono = { version = "0.4.45", features = ["serde"] }
serde_json = "1.0.150"
